objects/FSL_SPAffilations_Stage__c.object
<CustomObject>
    <fields>
        <fullName>AffiliationRowId__c</fullName>
        <externalId>true</externalId>
        <label>AffiliationRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdatedDate__c</fullName>
        <label>LastUpdatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastUpdated_By__c</fullName>
        <label>LastUpdated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCode__c</fullName>
        <label>SPCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPRowId__c</fullName>
        <label>SPRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>FSL_SPAffilations_Stage</label>
    <nameField>
        <label>FSL_SPAffilations_Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL_SPAffilations_Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>